# book-store

./: .gitignore  package.json  pnpm-lock.yaml  pom.xml  tailwind.config.js  tailwind.css
.jpb/: jpb-settings.xml
recommender/: .env.example  pyproject.toml  serve.py  training.ipynb
recommender_nlp/: knn_model.py  pyproject.toml  serve.py  training.ipynb
sql/: schema.sql  view.sql
src/main/resources/: application.properties  secret.properties.example
src/main/resources/templates/: error.html  fragments.html  index.html  order_details.html  register-success.html  register.html  user_profile.html  verify-success.html
src/main/resources/templates/auth/: login.html  register.html  register_success.html  resend_verify_success.html  verify-fail.html  verify_fail.html
src/main/resources/templates/books/: book_page.html  search_result.html  smart_search_result.html
src/main/resources/templates/customer/: cart.html  checkout_form.html  orders.html
src/main/resources/templates/email/: verify.html
src/main/resources/templates/error/: 403.html  404.html  500.html
src/main/resources/templates/homepage/: book_section.html  brand_section.html  category_section.html  index.html  product_section.html  publisher_section.html
src/main/resources/templates/htmx/: district_search_result.html  section_book_search_result.html  section_product_search_result.html  ward_search_result.html
src/main/resources/templates/management/: fragments.html  index.html
src/main/resources/templates/products/: product_page.html  search_result.html
(+224 files in other folders)
